# database

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  test.db  test.dot  todo.txt
doc/: README.md  output_graph.dot
proptest-regressions/: btree.txt
reference/: sql_expression_grammar.txt  sql_statement_grammar.txt
src/: btree.rs  btree_graph.rs  btree_verify.rs  cell.rs  cell_reader.rs  engine.rs  frontend.rs  main.rs  node.rs  node_new.rs  pager.rs  planner.rs  storage.rs  test.rs
src/btree/: stack.rs
src/compiler/: emitter.rs  expr.rs  mod.rs  nodes.rs  registers.rs
src/engine/: program.rs  registers.rs  scalarvalue.rs
src/frontend/: ast.rs  lexer.rs  parser.rs
src/node/: cell.rs
src/repl/: mod.rs  mode.rs  shared.rs
src/repl/modes/: btree.rs  engine.rs  mod.rs  parser.rs  planner.rs
src/storage/: btree.rs  btree_graph.rs  btree_verify.rs  cell.rs  cell_reader.rs  node.rs  pager.rs
